kube-modl-uk-ruby/modl-uk-ruby-svc.prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: modl-uk-ruby
  namespace: prod
  labels:
    app: modl-uk-ruby
spec:
  selector:
    app: modl-uk-ruby
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  sessionAffinity: None
  type: ClusterIP
