kube-modl-uk-ruby/modl-uk-ruby-ingress.prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: modl-uk-ruby
  namespace: prod
spec:
  rules:
    - host: www.modl.placeholder.numserver.com
      http:
        paths:
          - backend:
              service:
                name: modl-uk-ruby
                port:
                  number: 8080
            pathType: ImplementationSpecific
            path: /

  tls:
    - hosts:
        - www.modl.placeholder.numserver.com
      secretName: modl-uk-ruby-ssl
